--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://db.padeokrfuqewecdtootn.supabase.co:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=CUISINE-indicted4lambert2news
+
+logging.file.path=C:/logs/pizzastore
