--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,9 @@
     <description>Pizza Store Application</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
