I added the ability to login in as an employee.   There is a new property in the application.properties file that holds the email domain for the business.  If the domain matches, it sends it down the path of logging in an employee, otherwise it logs in a customer.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=postgres
 spring.datasource.password=CUISINE-indicted4lambert2news
 
 logging.file.path=C:/logs/pizzastore
+
+company.email.domain=work.com
