--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://db.padeokrfuqewecdtootn.supabase.co:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=CUISINE-indicted4lambert2news
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 logging.file.path=C:/logs/pizzastore
 
 company.email.domain=work.com
+
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200}
