--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-logging.file.path=C:/logs/pizzastore
+# Optional but helps Hibernate not freak out when connection issues happen
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+logging.file.path=./logs/pizzastore
 company.email.domain=work.com
-
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200}
